# axum-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/server_init_funcs/: server_init.rs  server_state_def.rs  shuffle_bag.rs
src/utils/env/: get_env_var.rs
src/utils/regex/: regex_defs.rs
src/utils/stopwatch/: stopwatch.rs
